--- a/css/style.css
+++ b/css/style.css
@@ -1,66 +1,154 @@
+@import url("https://fonts.googleapis.com/css2?family=Tangerine");
+
 :root {
 
     --primaryColor: rgb(43, 43, 43);
 
     --secondaryColor: #fffaed;
 
-    --titleFont: Apple Chancery, Cursive;
+    --titleFont: "Tangerine";
 
     --contentFont: Verdana, Optima, sans-serif;
 
 }
 
 body {
+    margin: 0;
+    background-color: var(--secondaryColor);
+}
 
-    background-image: url("decoPictures/bg.jpg");
-    display: grid;
-    grid-template-rows: 200Px auto 150px;
-    font-family: var(--contentFont);
+section {
+    padding-top: 2rem;
+    padding-bottom: 1rem;
+    padding-left: 1rem;
+}
+
+section:nth-child(2n+2) {
+    background-color: var(--primaryColor);
 }
 
 main {
+
     background-color: var(--secondaryColor);
     background-size: contain;
     display: flex;
     flex-direction: column;
     align-items: center;
-
 }
+
 
 h1 {
     font-family: var(--titleFont);
+    font-size: 4rem;
+    background-image: url("decoPictures/violon_color.png");
+    background-repeat: no-repeat;
+    background-position-y: 16px;
+    padding-left: 3rem;
+    height: 100px;
+    text-shadow: 1px 1px 1px gray;
 }
-
-section {
-    width: 80%;
-    margin: auto;
-
-}
-
-section p {
-    font-size: 2rem;
-
-}
-
 
 .archet {
-    width: 300px;
-    margin: 1rem;
+    display: none;
+}
+
+
+#expression,
+#presentation,
+#commentaires {
+    background-color: var(--secondaryColor);
+    color: var(--primaryColor);
+}
+
+#carrousel,
+#empreinte {
+    background-color: var(--primaryColor);
+    color: var(--secondaryColor);
 
 }
 
-@media screen and (min-width:769px) {
+@media only screen and (min-device-width : 817px) {
     body {
+        background-image: url("decoPictures/bg.jpg");
+        display: grid;
+        grid-template-rows: 260px auto 150px;
+        font-family: var(--contentFont);
         width: 80%;
         margin: auto;
     }
 
-    section p {
-        font-size: 1rem;
+
+    main {
+        background-color: var(--secondaryColor);
+        background-size: contain;
+        display: flex;
+        flex-direction: column;
+    }
+
+    section {
+        width: 80%;
+        margin: auto;
+        background-color: var(--secondaryColor);
+        color: var(--secondaryColor);
+    }
+
+    #expression,
+    #presentation,
+    #commentaires,
+    #carrousel,
+    #empreinte {
+        background-color: var(--secondaryColor);
+        color: var(--primaryColor);
+
     }
 
     #presentation div {
         display: flex;
-        margin: 1rem;
     }
+
+    #presentation p {
+        margin-right: 50px;
+        letter-spacing: 0.2px;
+        font-size: 1rem;
+    }
+
+    span {
+        padding-left: 20px;
+    }
+
+    #titleArticleArthur,
+    .titleArticleEmpreinte {
+        text-decoration: underline;
+    }
+
+    #empreinte div {
+        letter-spacing: 0.2px;
+    }
+
+    .empreinteNumerique {
+        display: flex;
+        margin-bottom: 40px;
+    }
+
+    .empreinteNumerique div {
+        width: 50%;
+    }
+
+    .empreinteNumerique1 {
+        margin-right: 50px;
+    }
+
+    .empreinteNumerique2 {
+        margin-top: -4px;
+    }
+
+    .archet {
+        display: block;
+        width: 350px;
+        margin: auto;
+        margin-bottom: 2rem;
+        transform: rotate(-10deg);
+        margin-top: 3rem;
+    }
+
 }
