--- a/css/styleFooter.css
+++ b/css/styleFooter.css
@@ -2,8 +2,8 @@ footer {
     width: auto;
     background-color: var(--primaryColor);
     color: var(--secondaryColor);
-    display: flex;
-    flex-direction: column;
+    display : grid;
+    grid-template-columns: 50px 1fr;
     align-items: center;
     font-size: 0.8rem;
     padding-left: 1rem;
@@ -13,4 +13,18 @@ footer {
 
 footer img {
     width: 50px;
+    margin-top: 1rem;
+}
+
+@media only screen and (min-device-width : 817px) {
+    footer {
+        flex-direction: row;
+
+    }
+
+    footer div:first-child {
+        margin-left: 1rem
+    }
+
+    footer div:last-child {}
 }
